<resources>
    <string name="app_name">Firebase Demo</string>

    <string name="editText_hint">Enter your email</string>
    <string name="password_hint">Enter your Password</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Sign up</string>
    <string name="main_menu">Main Menu</string>
    <string name="signout">Sign Out</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_email">Enter your email </string>
    <string name="reset_password">Reset Password</string>
    <string name="signup_with_phone">Sign up with Phone</string>
    <string name="enter_phone">Enter your phone number</string>
    <string name="send_sms">Send SMS</string>
    <string name="enter_sent_code">Enter Sent Code</string>
    <string name="profile_photo_desc">Click on the photo to choose your profile photo.</string>
    <string name="upload_photo">Upload Photo to Firebase</string>
</resources>